2001-05-29  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nnshimbun.el (nnshimbun-retrieve-headers-with-nov): Don't
	use `last'.
	(nnshimbun-make-shimbun-header): Use the following macros.
	(nnshimbun-mail-header-from): New macro whose definition will be
	changed statically for Gnus or gnus.
	(nnshimbun-mail-header-subject): Ditto.
	(TopLevel): Don't require `gnus-clfns'.

	* lisp/gnus.el: Add autoload for `find-cl-run-time-functions'.

	* lisp/gnus-clfns.el (find-cl-run-time-functions): New command for
	the developers.
	(cl-run-time-functions): New variable.
	(TopLevel): Don't require `cl' at run-time.

2001-05-28  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* texi/gnus-ja.texi (Web Newspaper): Updated.

2001-05-28  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/dgnushack.el (dgnushack-unexporting-files): Add
	"nnshimbun.el" if the library "shimbun" is not found.
	(TopLevel): Add "/somewhere/apel/" to `load-path' if it is needed.
	(locate-library): Redefine it for Mule before it is called.

	* README.semi.ja: Update for the use of Emacs-W3M.
	* README.semi: Ditto.
	* Mule23@1934.ja: Ditto.
	* Mule23@1934.en: Ditto.

2001-05-28  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el: Reconstructed to use `shimbun'.

	* lisp/gnus-group.el (gnus-group-make-shimbun-group):
	Reconstructed to use `shimbun'.

	* lisp/dgnushack.el (toplevel): Add paths if and only if APEL and
	FLIM can't be found.

2001-05-17  Kai =?iso-8859-1?q?Gro=DFjohann?=  <Kai.Grossjohann@CS.Uni-Dortmund.DE>

	* etc/Makefile.in (datadir): Set this variable, like in the other
	Makefile.in's.  Patch from Gaute B Strokkenes <gs234@cam.ac.uk>.

2001-05-16  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/dgnushack.el (dgnushack-bind-colon-keywords): Don't ignore
	`widget-convert-button', `widget-create' and `widget-put'; ignore
	`defface'.

2001-05-14  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus.el: Require `base64' if `base64-encode-string' is not a
	built-in function.
